--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,12 @@
 ---
 title: "DS2023 Final Project"
 author: "Avalon Bennett, Kylie Stephens, and Will Wert"
-format: html
-toc: true
+format:
+  html:
+    number-sections: false
 ---
 
-# Report
+# Report 
 
 ![](images/leap2.0.png)
 
