--- a/datadictionary.qmd
+++ b/datadictionary.qmd
@@ -3,6 +3,8 @@ title: "Data Dictionary"
 format: html
 toc: true
 ---
+# Data Dictionary {.unnumbered}
+
 
 This document contains a data dictionary for the patient data collected in the study. Each variable is defined below:
 
