--- a/dataviz.qmd
+++ b/dataviz.qmd
@@ -628,7 +628,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('acl_rsi_age_scatter.png', dpi=300, bbox_inches='tight')
+plt.savefig('acl_rsi_age_scatter.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -659,7 +659,7 @@ plt.gca().spines['right'].set_visible(False)
 plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 # Saving the graph
-#plt.savefig('tss_dashboard_histogram.png', dpi=300, bbox_inches='tight')
+plt.savefig('tss_dashboard_histogram.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -706,7 +706,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('lsi_ext_isok_60_histogram.png', dpi=300, bbox_inches='tight')
+plt.savefig('lsi_ext_isok_60_histogram.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -740,7 +740,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('aclr_isok_flexion_histogram.png', dpi=300, bbox_inches='tight')
+plt.savefig('aclr_isok_flexion_histogram.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -762,7 +762,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('sh_lsi_bmi_scatter.png', dpi=300, bbox_inches='tight')
+plt.savefig('sh_lsi_bmi_scatter.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -798,7 +798,7 @@ plt.tick_params(axis='y', which='both', length=0)
 plt.legend(loc='upper left', bbox_to_anchor=(1, 1), title='LSI Conditions')
 
 # Saving the graph
-#plt.savefig('sh_lsi_tss_dashboard_scatter.png', dpi=300, bbox_inches='tight')
+plt.savefig('sh_lsi_tss_dashboard_scatter.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -832,7 +832,7 @@ plt.tick_params(axis='y', which='both', length=0)
 plt.legend(loc='upper left', bbox_to_anchor=(1, 1), title='Time Since Surgery')
 
 # Saving the graph
-#plt.savefig('acl_rsi_kdeplot.png', dpi=300, bbox_inches='tight')
+plt.savefig('acl_rsi_kdeplot.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -856,7 +856,7 @@ ax.spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both', length=0)
 
 # Saving the graph
-#plt.savefig('graft_type_histogram.png', dpi=300, bbox_inches='tight')
+plt.savefig('graft_type_histogram.png', dpi=300, bbox_inches='tight')
 plt.tight_layout()
 plt.show()
 ```
@@ -890,7 +890,7 @@ plt.tick_params(axis='y', which='both',length=0)
 plt.legend()
 
 # Saving the graph
-#plt.savefig('acl_rsi_graft_kdeplot.png', dpi=300, bbox_inches='tight')
+plt.savefig('acl_rsi_graft_kdeplot.png', dpi=300, bbox_inches='tight')
 plt.show()
 
 ```
@@ -924,7 +924,7 @@ plt.xticks(rotation=45, ha='right')
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('event_distribution_histogram.png', dpi=300, bbox_inches='tight')
+plt.savefig('event_distribution_histogram.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -955,7 +955,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both', length=0)
 
 # Saving the graph
-#plt.savefig('acl_rsi_visit_kdeplot.png', dpi=300, bbox_inches='tight')
+plt.savefig('acl_rsi_visit_kdeplot.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
@@ -1049,7 +1049,7 @@ ax.spines['right'].set_visible(False) #Get rid of top spine of graph
 ax.tick_params(axis='x', rotation=0, length=0) #Get rid of x-axis ticks
 
 # Saving the graph
-#plt.savefig('RSI_Score_Progression.png', dpi=300, bbox_inches='tight')
+plt.savefig('RSI_Score_Progression.png', dpi=300, bbox_inches='tight')
 
 plt.tight_layout()
 plt.show() #Display Graph
@@ -1394,7 +1394,7 @@ ax.set_yticks([0, 40, 80, 120]) #Setting y-ticks and labels only for these value
 ax.set_yticklabels([0, 40, 80, 120], fontsize=12)
 
 # Saving the graph
-#plt.savefig('Biomechanics_Symmetry.png', dpi=300, bbox_inches='tight')
+plt.savefig('Biomechanics_Symmetry.png', dpi=300, bbox_inches='tight')
 
 plt.tight_layout()
 plt.show() #Display graph
@@ -1457,7 +1457,7 @@ fig.suptitle('Quadriceps and Hamstrings Strength at 60 °/s (Isokinetic)', fonts
 plt.tight_layout(rect=[0, 0, 1, 0.95])
 
 # Saving the graph
-#plt.savefig('Strength_Comparison.png', dpi=300, bbox_inches='tight')
+plt.savefig('Strength_Comparison.png', dpi=300, bbox_inches='tight')
 
 plt.show() #Display the graph
 
@@ -1549,7 +1549,7 @@ fig.suptitle('Quadriceps and Hamstrings Strength at 60 °/s (Isokinetic)', fonts
 plt.tight_layout(rect=[0, 0, 1, 0.95])
 
 # Saving the graph
-#plt.savefig('Strength_Comparison.png', dpi=300, bbox_inches='tight')
+plt.savefig('Strength_Comparison.png', dpi=300, bbox_inches='tight')
 plt.show() #Display the graph
 ```
 
@@ -1620,7 +1620,7 @@ fig.suptitle('Single Limb Hop Tests', fontsize=22)
 plt.tight_layout(rect=[0, 0, 1, 0.95])
 
 # Saving the graph
-#plt.savefig('Single_Limb_Hop_Tests.png', dpi=300, bbox_inches='tight')
+plt.savefig('Single_Limb_Hop_Tests.png', dpi=300, bbox_inches='tight')
 plt.show() #Display graph
 ```
 
@@ -1793,7 +1793,7 @@ plt.tick_params(axis='x', length=0)
 plt.grid(False)
 
 # Saving the graph
-#plt.savefig('TH_LSI_Progression.png', dpi=300, bbox_inches='tight')
+plt.savefig('TH_LSI_Progression.png', dpi=300, bbox_inches='tight')
 
 plt.tight_layout()
 plt.show() #Display graph
@@ -1900,7 +1900,7 @@ plt.tick_params(axis='x', rotation=0, length=0)
 plt.grid(False)
 
 # Saving the graph
-#plt.savefig('SH_LSI_Progression.png', dpi=300, bbox_inches='tight')
+plt.savefig('SH_LSI_Progression.png', dpi=300, bbox_inches='tight')
 
 plt.tight_layout()
 plt.show() #Display graph
@@ -2052,7 +2052,7 @@ ax.spines['right'].set_visible(False)
 plt.tick_params(axis='x', length=0)
 
 # Saving the graph
-#plt.savefig('Quadricep_Strength_Recovery.png', dpi=300, bbox_inches='tight')
+plt.savefig('Quadricep_Strength_Recovery.png', dpi=300, bbox_inches='tight')
 
 plt.tight_layout()
 plt.show() #Display graph
@@ -2361,7 +2361,7 @@ plt.gca().spines['left'].set_visible(False)
 plt.tick_params(axis='y', which='both',length=0)
 
 # Saving the graph
-#plt.savefig('missing_data_heatmap.png', dpi=300, bbox_inches='tight')
+plt.savefig('missing_data_heatmap.png', dpi=300, bbox_inches='tight')
 plt.show()
 ```
 
