trying to get pictures to work

--- a/datacleaning.qmd
+++ b/datacleaning.qmd
@@ -2,8 +2,7 @@
 title: "Data Cleaning"
 format: html
 ---
-
-# Data Cleaning {.unnumbered}
+This is simulated data on ACLR patients. 
 
 ```{python}
 ### Import libraries
