--- a/datacleaning.qmd
+++ b/datacleaning.qmd
@@ -1,7 +1,5 @@
----
-title: "Data Cleaning"
-format: html
----
+# Data Cleaning {.unnumbered}
+
 This is simulated data on ACLR patients. 
 
 ```{python}
